2000-06-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/smtp/camel-smtp-transport.c (smtp_connect): Will now always
	send EHLO first, if that fails it will fall back on HELO.
	(esmtp_get_authtypes): Should now correctly parse authtypes.

2000-06-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-summary.c: Now builds (not that it's worth much yet).
	
	* providers/imap/camel-imap-folder.c (imap_get_uids): Now uses the correct 
	cast to a CamelImapMessageInfo structure (should get rid of compile warnings).

	* providers/imap/Makefile.am: Added rules to build 
	camel-imap-stream
	
	* providers/imap/camel-imap-store.c (get_folder): Update.
	Moved imap_create here.

	* providers/imap/camel-imap-folder.c (delete_messages): Remove.
	(imap_create): Removed.
	(imap_delete): Removed.
	(imap_exists): Removed.

	* providers/imap/camel-imap-stream.h: Added typedef's for the stream

	* providers/imap/camel-imap-stream.c: Modified to build cleanly

2000-06-07  Not Zed  <NotZed@HelixCode.com>

	* camel-mime-utils.c (header_msgid_decode_internal): Properly
	dereference warning/debug messages.
	(header_references_decode): Check we actually have msgid stuff
	before trying to decode it ...

2000-06-06  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-imap-stream.[c,h]: Removed

	* providers/imap/camel-imap-stream.[c,h]: Relocated to this
	location

	* providers/imap/camel-imap-summary.c: Added

2000-06-06  Dan Winship  <danw@helixcode.com>

	* camel-folder.c: Remove exists, create, delete. A CamelFolder
	now always references an existing folder. Remove delete_messages
	too since it wasn't being used. Add a "create" flag to
	get_subfolder saying whether or not to create the subfolder if it
	doesn't yet exist.

	* camel-store.c (camel_store_get_folder): Add a "create" flag to
	say whether or not to create the folder if it doesn't yet exist.
	(camel_store_delete_folder): New method, moved from CamelFolder.
	(cache_folder, uncache_folder): Fix up a bit.