@@ -3,7 +3,6 @@
 
 /* 
  * Authors: Jeffrey Stedfast <fejj@helixcode.com>
- *          Ross Golder <ross@golder.org>
  *
  * Copyright (C) 2000 Helix Code, Inc.
  *
@@ -45,6 +44,7 @@ extern "C" {
 typedef struct {
 	CamelStore parent_object;	
 
+	CamelFolder *current_folder;
 	CamelStream *istream, *ostream;
 	guint32 command;
 
@@ -67,8 +67,8 @@ void camel_imap_store_close (CamelImapStore *store, gboolean expunge,
 
 enum { CAMEL_IMAP_OK, CAMEL_IMAP_ERR, CAMEL_IMAP_FAIL };
 
-gint camel_imap_command (CamelImapStore *store, char **ret, char *fmt, ...);
-gint camel_imap_command_extended (CamelImapStore *store, char **ret, char *fmt, ...);
+gint camel_imap_command (CamelImapStore *store, CamelFolder *folder, char **ret, char *fmt, ...);
+gint camel_imap_command_extended (CamelImapStore *store, CamelFolder *folder, char **ret, char *fmt, ...);
 
 /* Standard Gtk function */
 GtkType camel_imap_store_get_type (void);
